language checker updated